--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ SEOTitle: Lindansmiling的博客 | Lindansmiling Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
 description: "这里是Lindansmiling 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
-url: "https://huangxuan.me" # your host, for absolute URL
+keyword: "Lindansmiling, lindansmiling, @lindansmiling, Lindansmiling的博客, Lindansmiling Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+url: "https://lindansmiling.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
