--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Lindansmiling Blog
+title: Lindansmiling Blog 2024-04-21
 SEOTitle: Lindansmiling的博客 | Lindansmiling Blog
 header-img: img/home-bg.jpg
 email: huxpro@gmail.com
